# Argen

./: .gitignore  Argen2.todo  LICENSE  README.md  argparser.py  deduction_rules.txt  helptext.txt  helptext_2.txt  helptextparser.py  parsing_arguments.txt  test_helptext.txt  tutorial.md
Argen/: ParseArguments  ParseArguments.cpp  ParseArguments.h  ParseArguments.hpp  argen.py  argparser_cpp.py  argument.py  code_properties.py  codegen.py  constants.py  cpp_template.txt  deduce_arguments.py  deduce_count.py  deduce_flags_and_metavars.py  deduce_member_count.py  deduce_member_names.py  deduce_member_size.py  deduce_member_types.py  deduce_operations.py  deduce_option_names.py  deduce_separator_counts.py  deduce_special_options.py  deduce_valid_values.py  deduce_value_types.py  deduce_values.py  deducedtype.py  find_shortest_unique_prefixes.py  generate_argument_iterator.py  generate_argument_processors.py  generate_from_string.py  generate_header.py  generate_help_text_string.py  generate_option_functions.py  generate_parse_arguments.py  generate_parse_arguments_helpers.py  generate_parse_option.py  generate_source.py  generate_test_code.py  generate_test_functions.py  generate_value_processing_functions.py  (+22 more)
Argen2/: argen.py  argument.py  code_properties.py  deduce_arguments.py  deduce_flags_and_metavars.py  deduce_help_option.py  deduce_indices.py  deduce_member_names.py  deduce_member_types.py  deduce_operations.py  deduce_separator_counts.py  deduce_separators.py  deduce_special_options.py  (+47 more)
Tests/list_of_tuple_argument/: CMakeLists.txt  helptext.txt  test.py
(+46 files in other folders)
